# Przs-C-WoC-Higher

./: .gitignore  CMakeLists.txt  debug_load.txt  image.qrc  main.cpp  readme.md  widget.cpp  widget.h
